Errors reformatted; minor changes to searchUser operation.
