# service/api/api-profile.go
@@ -12,9 +12,11 @@ import (
 
 func (rt _router) getUserProfile(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
+	w.Header().Set("Content-Type", "application/json")
+
+	// Retrieve the username and check if it is valid
 	username := components.Username{Uname: ps.ByName("username")}
 
-	// Check if the provided username is valid
 	valid, err := username.CheckIfValid()
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
@@ -22,37 +24,32 @@ func (rt _router) getUserProfile(w http.ResponseWriter, r *http.Request, ps http
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while decoding the body of the request",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
-
 		return
 	}
 
-	if !*valid { // Username not valid - wrong format
+	if !*valid { // Username not valid
 		w.WriteHeader(http.StatusBadRequest)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username is not valid"))
+		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username not valid"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "400",
-			Description: "provided username does not satisfy its associated regular expression",
+			Description: "provided username not valid",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
-			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
+			ctx.Logger.Error(fmt.Errorf("error while writing the response error in the response body"))
 		}
 
 		return
@@ -66,16 +63,14 @@ func (rt _router) getUserProfile(w http.ResponseWriter, r *http.Request, ps http
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while checking if the username provided exists or not",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
@@ -83,24 +78,23 @@ func (rt _router) getUserProfile(w http.ResponseWriter, r *http.Request, ps http
 
 	if !*valid { // The provided username does not exist
 		w.WriteHeader(http.StatusNotFound)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username does not exists"))
+		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username does not exist"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "404",
-			Description: "provided username is not registered on WASAPhoto",
+			Description: "provided username not registered on WASAPhoto",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 		return
 	}
 
+	// Retrieve the profile of the user with the given username
 	profile, err := rt.db.GetUserProfile(username.Uname)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
@@ -108,35 +102,34 @@ func (rt _router) getUserProfile(w http.ResponseWriter, r *http.Request, ps http
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while getting the profile of the user",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 		return
 	}
 
+	// Send the profile to the client
 	response, err := json.Marshal(profile)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		ctx.Logger.WithError(err).Error(fmt.Errorf("error while enconding the response as JSON"))
+
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
 			Description: "error while enconding the response as JSON",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 		return
 	}
@@ -145,18 +138,18 @@ func (rt _router) getUserProfile(w http.ResponseWriter, r *http.Request, ps http
 	_, err = w.Write([]byte(response))
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response in the response body"))
+
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
 			Description: "error while writing the response in the response body",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 		return
 	}
@@ -164,6 +157,8 @@ func (rt _router) getUserProfile(w http.ResponseWriter, r *http.Request, ps http
 }
 
 func (rt _router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+
+	w.Header().Set("Content-Type", "application/json")
 
 	// Retrieve the authorization token and username from the request
 	token := components.ID{RandID: r.Header.Get("Authorization")}
@@ -173,98 +168,89 @@ func (rt _router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httpr
 	valid, err := username.CheckIfValid()
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("error while decoding the body of the request"))
+		ctx.Logger.WithError(err).Error(fmt.Errorf("error while checking if the username is valid"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while checking if the username is valid",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
 	}
 
-	if !*valid { // Username not valid - wrong format
+	if !*valid { // Username not valid
 		w.WriteHeader(http.StatusBadRequest)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username is not valid"))
+		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username not valid"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "400",
-			Description: "provided username does not satisfy its associated regular expression",
+			Description: "provided username not valid",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
 	}
 
-	// Check if the username actually exists or not in WASAPhoto
-	valid, err = rt.db.CheckIfUsernameExists(username.Uname)
+	// Check if the provided Auth token is valid
+	valid, err = token.CheckIfValid()
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("error while checking if the username provided exists or not"))
+		ctx.Logger.WithError(err).Error(fmt.Errorf("error while checking if the provided Auth token is valid or not"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while checking if the provided Auth token is valid or not",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
-
-		return
 	}
 
-	if !*valid { // The provided username does not exist
-		w.WriteHeader(http.StatusNotFound)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username does not exists"))
+	if *valid { // Auth token not valid
+		w.WriteHeader(http.StatusBadRequest)
+		ctx.Logger.Error(fmt.Errorf("provided Auth token not valid"))
 
 		error, err := json.Marshal(components.Error{
-			ErrorCode:   "404",
-			Description: "provided username is not registered on WASAPhoto",
+			ErrorCode:   "400",
+			Description: "provided Auth token not valid",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
+
 		return
 	}
 
-	// Check if the user sending the request is authenticated
-	valid, err = rt.db.CheckCombinationIsValid(username.Uname, token.RandID)
+	// Retrieve the username associated to the given Auth token
+	usernameAuth, err := rt.db.GetUsernameByToken(token.RandID)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("error while checking if the user is authenticated or not"))
+		ctx.Logger.WithError(err).Error(fmt.Errorf("error encountered while getting the username associated with the given token from the DB"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error encountered while getting the username associated with the given token from the DB",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
@@ -279,23 +265,42 @@ func (rt _router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httpr
 		return
 	}
 
-	if !*valid { // The user is not authenticated
+	// Check if there exists an user registered with such token
+	if len(usernameAuth.Uname) == 0 {
+		w.WriteHeader(http.StatusBadRequest)
+		ctx.Logger.Error(fmt.Errorf("no username associated with the provided Auth token"))
+
+		error, err := json.Marshal(components.Error{
+			ErrorCode:   "400",
+			Description: "no username associated with the provided Auth token",
+		})
+		if err != nil {
+			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
+		}
+		_, err = w.Write([]byte(error))
+		if err != nil {
+			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
+		}
+
+		return
+	}
+
+	if username.Uname != usernameAuth.Uname { // Not the same username
 		w.WriteHeader(http.StatusUnauthorized)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username is not authenticated"))
+		ctx.Logger.Error(fmt.Errorf("not authorized to change the username of another user"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "401",
-			Description: "provided username is not registered on WASAPhoto",
+			Description: "not authorized to change the username of another user",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
+
 		return
 	}
 
@@ -312,12 +317,10 @@ func (rt _router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httpr
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
@@ -331,42 +334,38 @@ func (rt _router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httpr
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while checking if the new username provided is valid or not",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
 	}
 
-	if !*valid { // The provided username is not valid
-		w.WriteHeader(http.StatusNotFound)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username is not valid"))
+	if !*valid { // new_username not valid
+		w.WriteHeader(http.StatusBadRequest)
+		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username not valid"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "400",
-			Description: "provided username is not in a valid format",
+			Description: "provided username not valid",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 		return
 	}
 
-	// Call to the relative DB function
+	// Update the username
 	err = rt.db.UpdateUsername(new_username.Uname, username.Uname)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
@@ -374,24 +373,25 @@ func (rt _router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httpr
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while updating the username",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
 	}
 
+	// Send the new username to the client as confirmation of the its new username
 	response, err := json.Marshal(new_username)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		ctx.Logger.WithError(err).Error(fmt.Errorf("error while enconding the response as JSON"))
+
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
 			Description: "error while enconding the response as JSON",
@@ -412,6 +412,8 @@ func (rt _router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httpr
 	_, err = w.Write([]byte(response))
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response"))
+
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
 			Description: "error while writing the response",
