# service/api/api-session.go
@@ -12,6 +12,8 @@ import (
 
 func (rt _router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
+	w.Header().Set("Content-Type", "application/json")
+
 	// Parse the username of the user is trying to login
 	var Username components.Username
 	err := json.NewDecoder(r.Body).Decode(&Username)
@@ -25,12 +27,10 @@ func (rt _router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
@@ -44,66 +44,33 @@ func (rt _router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: err.Error(),
+			Description: "error while decoding the body of the request",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
 	}
 
-	if !*valid {
+	if !*valid { // Username not valid
 		w.WriteHeader(http.StatusBadRequest)
-		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username is not valid"))
+		ctx.Logger.WithError(err).Error(fmt.Errorf("provided username not valid"))
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "400",
-			Description: "provided username does not satisfy its associated regular expression",
+			Description: "provided username not valid",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
-		}
-
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-
-	// HTTP Error 400: Unacceptable
-	if err != nil {
-
-		// Write the header for the response code
-		w.WriteHeader(http.StatusNotAcceptable)
-
-		// Return the error to the logger
-		ctx.Logger.WithError(err).Error(fmt.Errorf("error while parsing the username from the request body"))
-
-		// Return the error in the response body
-		error, err := json.Marshal(components.Error{
-			ErrorCode:   "400",
-			Description: "error while parsing the username from the request body...",
-		})
-		if err != nil {
-			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
-		}
-		_, err = w.Write([]byte(error))
-		if err != nil {
-			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
@@ -118,16 +85,14 @@ func (rt _router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.
 
 		error, err := json.Marshal(components.Error{
 			ErrorCode:   "500",
-			Description: "error while parsing the username from the DB...",
+			Description: "error while parsing the id for the given user",
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 
 		return
@@ -142,16 +107,15 @@ func (rt _router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while encoding the response error as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 		return
 	}
 
+	// Send the response to the client
 	w.WriteHeader(http.StatusCreated)
 	_, err = w.Write([]byte(response))
 	if err != nil {
@@ -162,12 +126,10 @@ func (rt _router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.
 		})
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error as JSON"))
-			return
 		}
 		_, err = w.Write([]byte(error))
 		if err != nil {
 			ctx.Logger.WithError(err).Error(fmt.Errorf("error while writing the response error in the response body"))
-			return
 		}
 		return
 	}
